Fix: BaseResponse 추가 -> 전반적인 코드 리팩토링